# sourcelynk

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: magic.rs  main.rs
