[package]
name = "sourcelynk"
version = "0.1.0"
authors = ["Matt Schulte <schultetwin1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiledfiles="0.7"
clap = "2.34"
git2 = { version = "0.15", default-features = false }
log = "0.4"
path-slash = "0.2.0"
pretty_env_logger = "0.4.0"
serde_json = "1.0"
tempfile = "3.3.0"
url = "2.2.2"
walkdir = "2"
