[package]
name = "sourcelynk"
version = "0.1.0"
authors = ["Matt Schulte <schultetwin1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiledfiles="0.8"
clap = "4.5"
git2 = { version = "0.18", default-features = false }
log = "0.4"
path-slash = "0.2.1"
pretty_env_logger = "0.5.0"
serde_json = "1.0"
tempfile = "3.10.1"
url = "2.5.1"
walkdir = "2"
